force-app/main/default/objects/Webinar_Ticket__c/Webinar_Ticket__c.object-meta.xml
<CustomObject>
    <label>Webinar Ticket</label>
    <nameField>
        <displayFormat>TICKET-{0000}</displayFormat>
        <label>Webinar Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webinar Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>