force-app/main/default/objects/Webinar_Ticket__c/fields/Webinar_Name__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Name__c</fullName>
    <label>Webinar Name</label>
    <referenceTo>Webinar__c</referenceTo>
    <relationshipLabel>Webinar Tickets</relationshipLabel>
    <relationshipName>Webinar_Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>