force-app/main/default/objects/Webinar_Ticket__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISBLANK( Email__c ))  &amp;&amp;  NOT( REGEX( Email__c , &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$&quot;))</errorConditionFormula>
    <errorMessage>Email must be valid</errorMessage>
</ValidationRule>