force-app/main/default/objects/Webinar_Ticket__c/validationRules/Field_Checking.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Checking</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Full_Name__c ) ||  ISBLANK( Email__c )</errorConditionFormula>
    <errorMessage>Field must be filled</errorMessage>
</ValidationRule>