force-app/main/default/objects/Webinar_Ticket__c/validationRules/Phone_Numeric_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Numeric_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Phone__c , &quot;^[0-9]*$&quot;) )</errorConditionFormula>
    <errorMessage>Phone must be a number</errorMessage>
</ValidationRule>